# sag-py

./: .gitignore  README.md  algorithm.py  file.drawio  generate_jobs.py  make_new_state.py  pyproject.toml  requirements.txt  ros_counter_example copy.csv  task_diagram.py  tasks.csv  tasks.drawio
.github/workflows/: python-publish.yml
examples/all_cases/: fixed_release_fixed_exec_crit_instance.csv  fixed_release_fixed_exec_diff_release.csv  fixed_release_var_exec_crit_instance.csv  fixed_release_var_exec_diff_release.csv
examples/input_examples/job_sets/: ex_meeting_aug.csv  jobs.csv  overlapping_release_intervals.csv  ros_counter_example.csv  start_jitter.csv  timer_and_sub.csv
examples/job_sets/: brainstorm.csv  extent_of_pe.csv  variable_release.csv
examples/pred_sets/: pred_constraints.csv
jobSets/: jobs.csv  many_jobs.csv  ros_counter_example.csv  testAll.csv
predSets/: pred.csv
src/: drawio_diagram.py  generate_jobs.py  sag_rosJazzy.py  sag_rtas2019.py  sagpy.py  utils.py
src/sag_algorithms/: __init__.py  ecrts2019.py  ros.py
src/sagpy/: sagpy.py  utils.py
src/sagpy/sag_algorithms/: ecrts2019.py  ros.py  rosRJ.py  rosWS.py
test/: test_sag_ros.py
test/tests_sag_ros/test1/: jobs.csv  jobs_NEW.csv  sag.pkl
test/tests_sag_ros/test2/: jobs_NEW.csv  sag.pkl
test/tests_sag_ros/test3/: jobs.drawio  jobs_NEW.csv  sag.pkl
test/tests_sag_ros/test4/: jobs.csv  sag.pkl
tests/: test_sag_ros.py
tests/tests_sag_ros/test1/: jobs.drawio  sag.pkl
tests/tests_sag_ros/test2/: jobs.drawio  sag.pkl
tests/tests_sag_ros/test3/: jobs.csv  sag.pkl
(+2 files in other folders)
